// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`fetches the proposals from a selection step with excludeViewerVotes filter 1`] = `
Object {
  "node": Object {
    "id": "U2VsZWN0aW9uU3RlcDpzZWxlY3Rpb25TdGVwSWRmM1ZvdGU=",
    "proposals": Object {
      "edges": Array [
        Object {
          "node": Object {
            "title": "Proposition pour tester le doublon",
            "votes": Object {
              "edges": Array [],
            },
          },
        },
        Object {
          "node": Object {
            "title": "Proposition par un utilisateur France Connect",
            "votes": Object {
              "edges": Array [
                Object {
                  "node": Object {
                    "author": Object {
                      "email": "user@test.com",
                      "id": "VXNlcjp1c2VyNQ==",
                    },
                  },
                },
                Object {
                  "node": Object {
                    "author": Object {
                      "email": "lbrunet@cap-collectif.com",
                      "id": "VXNlcjp1c2VyMQ==",
                    },
                  },
                },
              ],
            },
          },
        },
        Object {
          "node": Object {
            "title": "Proposition sans adresse",
            "votes": Object {
              "edges": Array [],
            },
          },
        },
        Object {
          "node": Object {
            "title": "Incidunt ipsam ullam eius.",
            "votes": Object {
              "edges": Array [],
            },
          },
        },
        Object {
          "node": Object {
            "title": "Ut et et dolore quia illo explicabo dolores.",
            "votes": Object {
              "edges": Array [],
            },
          },
        },
        Object {
          "node": Object {
            "title": "Harum alias omnis quibusdam asperiores aliquid ducimus.",
            "votes": Object {
              "edges": Array [],
            },
          },
        },
        Object {
          "node": Object {
            "title": "Natus ratione et illo architecto.",
            "votes": Object {
              "edges": Array [],
            },
          },
        },
        Object {
          "node": Object {
            "title": "Sed ut occaecati inventore excepturi.",
            "votes": Object {
              "edges": Array [],
            },
          },
        },
        Object {
          "node": Object {
            "title": "Est quia in atque quam mollitia sequi et nam.",
            "votes": Object {
              "edges": Array [],
            },
          },
        },
        Object {
          "node": Object {
            "title": "Sed sunt delectus nihil dolorum eum molestiae.",
            "votes": Object {
              "edges": Array [],
            },
          },
        },
        Object {
          "node": Object {
            "title": "Officia et neque pariatur vel laudantium et.",
            "votes": Object {
              "edges": Array [],
            },
          },
        },
        Object {
          "node": Object {
            "title": "Distinctio nam est velit quas.",
            "votes": Object {
              "edges": Array [],
            },
          },
        },
        Object {
          "node": Object {
            "title": "Necessitatibus nobis vel qui sit voluptatem.",
            "votes": Object {
              "edges": Array [],
            },
          },
        },
        Object {
          "node": Object {
            "title": "Repudiandae dolorem quo velit officiis.",
            "votes": Object {
              "edges": Array [],
            },
          },
        },
        Object {
          "node": Object {
            "title": "Est eos aut aut deleniti ut.",
            "votes": Object {
              "edges": Array [],
            },
          },
        },
        Object {
          "node": Object {
            "title": "Autem suscipit quia et.",
            "votes": Object {
              "edges": Array [],
            },
          },
        },
        Object {
          "node": Object {
            "title": "Et aut nam aspernatur neque aut quidem.",
            "votes": Object {
              "edges": Array [],
            },
          },
        },
        Object {
          "node": Object {
            "title": "Cum esse laborum sequi.",
            "votes": Object {
              "edges": Array [],
            },
          },
        },
        Object {
          "node": Object {
            "title": "Porro consequuntur accusamus pariatur aut explicabo quos.",
            "votes": Object {
              "edges": Array [],
            },
          },
        },
        Object {
          "node": Object {
            "title": "Harum sapiente repellat quo qui reprehenderit deleniti dignissimos.",
            "votes": Object {
              "edges": Array [],
            },
          },
        },
        Object {
          "node": Object {
            "title": "Possimus odit animi dicta.",
            "votes": Object {
              "edges": Array [],
            },
          },
        },
        Object {
          "node": Object {
            "title": "Ullam quidem quo vero soluta nostrum ea dolores.",
            "votes": Object {
              "edges": Array [],
            },
          },
        },
        Object {
          "node": Object {
            "title": "Vitae voluptatem tempora illo esse possimus maiores perspiciatis.",
            "votes": Object {
              "edges": Array [],
            },
          },
        },
        Object {
          "node": Object {
            "title": "Accusamus sed et expedita sed ea.",
            "votes": Object {
              "edges": Array [],
            },
          },
        },
        Object {
          "node": Object {
            "title": "Autem et quaerat tempora.",
            "votes": Object {
              "edges": Array [],
            },
          },
        },
        Object {
          "node": Object {
            "title": "Sit ea consequatur omnis est sint reprehenderit.",
            "votes": Object {
              "edges": Array [],
            },
          },
        },
        Object {
          "node": Object {
            "title": "Omnis recusandae rerum ipsum animi ut earum alias.",
            "votes": Object {
              "edges": Array [],
            },
          },
        },
        Object {
          "node": Object {
            "title": "Minus delectus eius pariatur molestias.",
            "votes": Object {
              "edges": Array [],
            },
          },
        },
        Object {
          "node": Object {
            "title": "Qui fugiat dolores placeat reprehenderit nesciunt architecto quas.",
            "votes": Object {
              "edges": Array [],
            },
          },
        },
        Object {
          "node": Object {
            "title": "Cum eos explicabo numquam omnis.",
            "votes": Object {
              "edges": Array [],
            },
          },
        },
        Object {
          "node": Object {
            "title": "Sapiente aperiam laboriosam deserunt ut non distinctio.",
            "votes": Object {
              "edges": Array [],
            },
          },
        },
        Object {
          "node": Object {
            "title": "Ullam dolores ut natus et ratione voluptate consequatur architecto.",
            "votes": Object {
              "edges": Array [],
            },
          },
        },
        Object {
          "node": Object {
            "title": "Error fuga nemo voluptas facilis qui consequuntur at.",
            "votes": Object {
              "edges": Array [],
            },
          },
        },
        Object {
          "node": Object {
            "title": "Ex quaerat blanditiis aspernatur et placeat tenetur et minus.",
            "votes": Object {
              "edges": Array [],
            },
          },
        },
        Object {
          "node": Object {
            "title": "In vel tempore aspernatur est placeat harum tempora rem.",
            "votes": Object {
              "edges": Array [],
            },
          },
        },
        Object {
          "node": Object {
            "title": "Adipisci sed voluptas adipisci architecto aut.",
            "votes": Object {
              "edges": Array [],
            },
          },
        },
        Object {
          "node": Object {
            "title": "Voluptas suscipit aut ea ipsum ad dignissimos et magnam.",
            "votes": Object {
              "edges": Array [],
            },
          },
        },
        Object {
          "node": Object {
            "title": "Cupiditate ut suscipit cumque exercitationem sed voluptatem et.",
            "votes": Object {
              "edges": Array [],
            },
          },
        },
        Object {
          "node": Object {
            "title": "Veniam beatae sequi nemo aliquid ut.",
            "votes": Object {
              "edges": Array [],
            },
          },
        },
        Object {
          "node": Object {
            "title": "Aut cumque aspernatur autem suscipit pariatur non.",
            "votes": Object {
              "edges": Array [],
            },
          },
        },
        Object {
          "node": Object {
            "title": "Soluta ea quos laborum et est.",
            "votes": Object {
              "edges": Array [],
            },
          },
        },
        Object {
          "node": Object {
            "title": "Id consequatur accusantium quia.",
            "votes": Object {
              "edges": Array [],
            },
          },
        },
        Object {
          "node": Object {
            "title": "Sapiente atque suscipit quisquam et quos non.",
            "votes": Object {
              "edges": Array [],
            },
          },
        },
        Object {
          "node": Object {
            "title": "Animi reprehenderit voluptas quisquam temporibus aspernatur.",
            "votes": Object {
              "edges": Array [],
            },
          },
        },
        Object {
          "node": Object {
            "title": "Voluptatem et et dolorem rerum commodi aut.",
            "votes": Object {
              "edges": Array [],
            },
          },
        },
        Object {
          "node": Object {
            "title": "In rerum voluptate exercitationem voluptate ullam eos consequatur.",
            "votes": Object {
              "edges": Array [],
            },
          },
        },
        Object {
          "node": Object {
            "title": "Quis expedita dolores autem quibusdam totam.",
            "votes": Object {
              "edges": Array [],
            },
          },
        },
        Object {
          "node": Object {
            "title": "Odio nobis est ex ut deserunt.",
            "votes": Object {
              "edges": Array [],
            },
          },
        },
        Object {
          "node": Object {
            "title": "Quae officia aut voluptatibus quas id non.",
            "votes": Object {
              "edges": Array [],
            },
          },
        },
        Object {
          "node": Object {
            "title": "Dicta voluptas veniam sit quo odio vero eum.",
            "votes": Object {
              "edges": Array [],
            },
          },
        },
        Object {
          "node": Object {
            "title": "Excepturi iusto nam at quas numquam iste nemo.",
            "votes": Object {
              "edges": Array [],
            },
          },
        },
        Object {
          "node": Object {
            "title": "Ea molestias tenetur fugiat pariatur.",
            "votes": Object {
              "edges": Array [],
            },
          },
        },
        Object {
          "node": Object {
            "title": "Est magni consequatur culpa ipsum.",
            "votes": Object {
              "edges": Array [],
            },
          },
        },
        Object {
          "node": Object {
            "title": "Debitis adipisci rerum nam.",
            "votes": Object {
              "edges": Array [],
            },
          },
        },
        Object {
          "node": Object {
            "title": "Nostrum eaque voluptatem similique reprehenderit sapiente consequatur earum.",
            "votes": Object {
              "edges": Array [],
            },
          },
        },
        Object {
          "node": Object {
            "title": "Quia eum qui asperiores tenetur eius mollitia.",
            "votes": Object {
              "edges": Array [],
            },
          },
        },
        Object {
          "node": Object {
            "title": "Soluta necessitatibus itaque culpa incidunt est sapiente.",
            "votes": Object {
              "edges": Array [],
            },
          },
        },
        Object {
          "node": Object {
            "title": "Amet officiis facilis deleniti quo aperiam sed quos.",
            "votes": Object {
              "edges": Array [],
            },
          },
        },
        Object {
          "node": Object {
            "title": "Placeat totam voluptatem occaecati.",
            "votes": Object {
              "edges": Array [],
            },
          },
        },
        Object {
          "node": Object {
            "title": "Aspernatur a unde quis ab voluptatem mollitia.",
            "votes": Object {
              "edges": Array [],
            },
          },
        },
        Object {
          "node": Object {
            "title": "Ea voluptas tenetur quis maxime ab sit.",
            "votes": Object {
              "edges": Array [],
            },
          },
        },
        Object {
          "node": Object {
            "title": "Voluptas vero repellat saepe reiciendis.",
            "votes": Object {
              "edges": Array [],
            },
          },
        },
        Object {
          "node": Object {
            "title": "Molestias ea iste maxime non animi nisi fugit magnam.",
            "votes": Object {
              "edges": Array [],
            },
          },
        },
        Object {
          "node": Object {
            "title": "Velit velit ut rem repellendus ut sit laudantium.",
            "votes": Object {
              "edges": Array [],
            },
          },
        },
        Object {
          "node": Object {
            "title": "Nobis iusto possimus accusantium fugiat.",
            "votes": Object {
              "edges": Array [],
            },
          },
        },
        Object {
          "node": Object {
            "title": "Animi et nulla voluptate iste enim sunt architecto.",
            "votes": Object {
              "edges": Array [],
            },
          },
        },
        Object {
          "node": Object {
            "title": "Vero aperiam fugit molestias illo repudiandae modi.",
            "votes": Object {
              "edges": Array [],
            },
          },
        },
        Object {
          "node": Object {
            "title": "Dolorem libero repellat ipsum ducimus distinctio explicabo.",
            "votes": Object {
              "edges": Array [],
            },
          },
        },
        Object {
          "node": Object {
            "title": "Adipisci fuga aspernatur distinctio quos.",
            "votes": Object {
              "edges": Array [],
            },
          },
        },
        Object {
          "node": Object {
            "title": "Nesciunt ut reiciendis perspiciatis eos ut.",
            "votes": Object {
              "edges": Array [],
            },
          },
        },
        Object {
          "node": Object {
            "title": "Labore quos saepe quia quia.",
            "votes": Object {
              "edges": Array [],
            },
          },
        },
        Object {
          "node": Object {
            "title": "Quaerat minima id corrupti veritatis aspernatur.",
            "votes": Object {
              "edges": Array [],
            },
          },
        },
        Object {
          "node": Object {
            "title": "At eveniet harum aperiam fugiat asperiores.",
            "votes": Object {
              "edges": Array [],
            },
          },
        },
        Object {
          "node": Object {
            "title": "Est quod ratione quidem odit unde.",
            "votes": Object {
              "edges": Array [],
            },
          },
        },
        Object {
          "node": Object {
            "title": "Harum voluptatem at enim tempora voluptas ut dolorem.",
            "votes": Object {
              "edges": Array [],
            },
          },
        },
        Object {
          "node": Object {
            "title": "Magnam magnam nihil ea officia.",
            "votes": Object {
              "edges": Array [],
            },
          },
        },
        Object {
          "node": Object {
            "title": "Tenetur deleniti quibusdam autem mollitia non occaecati explicabo.",
            "votes": Object {
              "edges": Array [],
            },
          },
        },
        Object {
          "node": Object {
            "title": "Nulla sunt tempora voluptates.",
            "votes": Object {
              "edges": Array [],
            },
          },
        },
        Object {
          "node": Object {
            "title": "Expedita eveniet sint inventore.",
            "votes": Object {
              "edges": Array [],
            },
          },
        },
        Object {
          "node": Object {
            "title": "Aut quaerat ut illo voluptatum quo rerum.",
            "votes": Object {
              "edges": Array [],
            },
          },
        },
        Object {
          "node": Object {
            "title": "Aut debitis laborum maiores nam nobis.",
            "votes": Object {
              "edges": Array [],
            },
          },
        },
        Object {
          "node": Object {
            "title": "Beatae vel sunt in voluptate.",
            "votes": Object {
              "edges": Array [],
            },
          },
        },
        Object {
          "node": Object {
            "title": "Quia ad quas ut cumque laborum quod.",
            "votes": Object {
              "edges": Array [],
            },
          },
        },
        Object {
          "node": Object {
            "title": "Quibusdam sed occaecati soluta porro vel facilis sunt.",
            "votes": Object {
              "edges": Array [],
            },
          },
        },
        Object {
          "node": Object {
            "title": "Praesentium nam consequatur incidunt.",
            "votes": Object {
              "edges": Array [],
            },
          },
        },
        Object {
          "node": Object {
            "title": "Qui alias itaque esse sint nisi sed maiores.",
            "votes": Object {
              "edges": Array [],
            },
          },
        },
        Object {
          "node": Object {
            "title": "Odio aut eum porro qui reprehenderit repellendus.",
            "votes": Object {
              "edges": Array [],
            },
          },
        },
        Object {
          "node": Object {
            "title": "Repellendus ipsa nemo dolores nesciunt.",
            "votes": Object {
              "edges": Array [],
            },
          },
        },
        Object {
          "node": Object {
            "title": "Consectetur numquam vel explicabo est rerum maiores.",
            "votes": Object {
              "edges": Array [],
            },
          },
        },
        Object {
          "node": Object {
            "title": "Voluptatibus quibusdam iusto sed rerum.",
            "votes": Object {
              "edges": Array [],
            },
          },
        },
        Object {
          "node": Object {
            "title": "Qui asperiores velit sit nihil hic excepturi.",
            "votes": Object {
              "edges": Array [],
            },
          },
        },
        Object {
          "node": Object {
            "title": "Eum vitae impedit recusandae temporibus quam.",
            "votes": Object {
              "edges": Array [],
            },
          },
        },
        Object {
          "node": Object {
            "title": "Minima repellat voluptates repudiandae.",
            "votes": Object {
              "edges": Array [],
            },
          },
        },
        Object {
          "node": Object {
            "title": "Consequuntur possimus sequi est harum.",
            "votes": Object {
              "edges": Array [],
            },
          },
        },
        Object {
          "node": Object {
            "title": "Perspiciatis nam ut omnis consequatur delectus et corporis.",
            "votes": Object {
              "edges": Array [],
            },
          },
        },
        Object {
          "node": Object {
            "title": "Eaque aut cum reiciendis voluptatem.",
            "votes": Object {
              "edges": Array [],
            },
          },
        },
        Object {
          "node": Object {
            "title": "Architecto blanditiis quaerat aliquam esse.",
            "votes": Object {
              "edges": Array [],
            },
          },
        },
        Object {
          "node": Object {
            "title": "Illum unde vitae quos officiis voluptatibus cupiditate cupiditate.",
            "votes": Object {
              "edges": Array [],
            },
          },
        },
        Object {
          "node": Object {
            "title": "Necessitatibus ad est cumque et vel aut.",
            "votes": Object {
              "edges": Array [],
            },
          },
        },
        Object {
          "node": Object {
            "title": "Sed enim dolores ipsum nisi sed quis ut.",
            "votes": Object {
              "edges": Array [],
            },
          },
        },
      ],
      "totalCount": 303,
    },
    "title": "Vote des Franciliens",
  },
}
`;

exports[`fetches the proposals from a selection step with excludeViewerVotes filter 2`] = `
Object {
  "node": Object {
    "id": "U2VsZWN0aW9uU3RlcDpzZWxlY3Rpb25TdGVwSWRmM1ZvdGU=",
    "proposals": Object {
      "edges": Array [
        Object {
          "node": Object {
            "title": "Proposition pour tester le doublon",
            "votes": Object {
              "edges": Array [],
            },
          },
        },
        Object {
          "node": Object {
            "title": "Proposition sans adresse",
            "votes": Object {
              "edges": Array [],
            },
          },
        },
        Object {
          "node": Object {
            "title": "Incidunt ipsam ullam eius.",
            "votes": Object {
              "edges": Array [],
            },
          },
        },
        Object {
          "node": Object {
            "title": "Ut et et dolore quia illo explicabo dolores.",
            "votes": Object {
              "edges": Array [],
            },
          },
        },
        Object {
          "node": Object {
            "title": "Harum alias omnis quibusdam asperiores aliquid ducimus.",
            "votes": Object {
              "edges": Array [],
            },
          },
        },
        Object {
          "node": Object {
            "title": "Natus ratione et illo architecto.",
            "votes": Object {
              "edges": Array [],
            },
          },
        },
        Object {
          "node": Object {
            "title": "Sed ut occaecati inventore excepturi.",
            "votes": Object {
              "edges": Array [],
            },
          },
        },
        Object {
          "node": Object {
            "title": "Est quia in atque quam mollitia sequi et nam.",
            "votes": Object {
              "edges": Array [],
            },
          },
        },
        Object {
          "node": Object {
            "title": "Sed sunt delectus nihil dolorum eum molestiae.",
            "votes": Object {
              "edges": Array [],
            },
          },
        },
        Object {
          "node": Object {
            "title": "Officia et neque pariatur vel laudantium et.",
            "votes": Object {
              "edges": Array [],
            },
          },
        },
        Object {
          "node": Object {
            "title": "Distinctio nam est velit quas.",
            "votes": Object {
              "edges": Array [],
            },
          },
        },
        Object {
          "node": Object {
            "title": "Necessitatibus nobis vel qui sit voluptatem.",
            "votes": Object {
              "edges": Array [],
            },
          },
        },
        Object {
          "node": Object {
            "title": "Repudiandae dolorem quo velit officiis.",
            "votes": Object {
              "edges": Array [],
            },
          },
        },
        Object {
          "node": Object {
            "title": "Est eos aut aut deleniti ut.",
            "votes": Object {
              "edges": Array [],
            },
          },
        },
        Object {
          "node": Object {
            "title": "Autem suscipit quia et.",
            "votes": Object {
              "edges": Array [],
            },
          },
        },
        Object {
          "node": Object {
            "title": "Et aut nam aspernatur neque aut quidem.",
            "votes": Object {
              "edges": Array [],
            },
          },
        },
        Object {
          "node": Object {
            "title": "Cum esse laborum sequi.",
            "votes": Object {
              "edges": Array [],
            },
          },
        },
        Object {
          "node": Object {
            "title": "Porro consequuntur accusamus pariatur aut explicabo quos.",
            "votes": Object {
              "edges": Array [],
            },
          },
        },
        Object {
          "node": Object {
            "title": "Harum sapiente repellat quo qui reprehenderit deleniti dignissimos.",
            "votes": Object {
              "edges": Array [],
            },
          },
        },
        Object {
          "node": Object {
            "title": "Possimus odit animi dicta.",
            "votes": Object {
              "edges": Array [],
            },
          },
        },
        Object {
          "node": Object {
            "title": "Ullam quidem quo vero soluta nostrum ea dolores.",
            "votes": Object {
              "edges": Array [],
            },
          },
        },
        Object {
          "node": Object {
            "title": "Vitae voluptatem tempora illo esse possimus maiores perspiciatis.",
            "votes": Object {
              "edges": Array [],
            },
          },
        },
        Object {
          "node": Object {
            "title": "Accusamus sed et expedita sed ea.",
            "votes": Object {
              "edges": Array [],
            },
          },
        },
        Object {
          "node": Object {
            "title": "Autem et quaerat tempora.",
            "votes": Object {
              "edges": Array [],
            },
          },
        },
        Object {
          "node": Object {
            "title": "Sit ea consequatur omnis est sint reprehenderit.",
            "votes": Object {
              "edges": Array [],
            },
          },
        },
        Object {
          "node": Object {
            "title": "Omnis recusandae rerum ipsum animi ut earum alias.",
            "votes": Object {
              "edges": Array [],
            },
          },
        },
        Object {
          "node": Object {
            "title": "Minus delectus eius pariatur molestias.",
            "votes": Object {
              "edges": Array [],
            },
          },
        },
        Object {
          "node": Object {
            "title": "Qui fugiat dolores placeat reprehenderit nesciunt architecto quas.",
            "votes": Object {
              "edges": Array [],
            },
          },
        },
        Object {
          "node": Object {
            "title": "Cum eos explicabo numquam omnis.",
            "votes": Object {
              "edges": Array [],
            },
          },
        },
        Object {
          "node": Object {
            "title": "Sapiente aperiam laboriosam deserunt ut non distinctio.",
            "votes": Object {
              "edges": Array [],
            },
          },
        },
        Object {
          "node": Object {
            "title": "Ullam dolores ut natus et ratione voluptate consequatur architecto.",
            "votes": Object {
              "edges": Array [],
            },
          },
        },
        Object {
          "node": Object {
            "title": "Error fuga nemo voluptas facilis qui consequuntur at.",
            "votes": Object {
              "edges": Array [],
            },
          },
        },
        Object {
          "node": Object {
            "title": "Ex quaerat blanditiis aspernatur et placeat tenetur et minus.",
            "votes": Object {
              "edges": Array [],
            },
          },
        },
        Object {
          "node": Object {
            "title": "In vel tempore aspernatur est placeat harum tempora rem.",
            "votes": Object {
              "edges": Array [],
            },
          },
        },
        Object {
          "node": Object {
            "title": "Adipisci sed voluptas adipisci architecto aut.",
            "votes": Object {
              "edges": Array [],
            },
          },
        },
        Object {
          "node": Object {
            "title": "Voluptas suscipit aut ea ipsum ad dignissimos et magnam.",
            "votes": Object {
              "edges": Array [],
            },
          },
        },
        Object {
          "node": Object {
            "title": "Cupiditate ut suscipit cumque exercitationem sed voluptatem et.",
            "votes": Object {
              "edges": Array [],
            },
          },
        },
        Object {
          "node": Object {
            "title": "Veniam beatae sequi nemo aliquid ut.",
            "votes": Object {
              "edges": Array [],
            },
          },
        },
        Object {
          "node": Object {
            "title": "Aut cumque aspernatur autem suscipit pariatur non.",
            "votes": Object {
              "edges": Array [],
            },
          },
        },
        Object {
          "node": Object {
            "title": "Soluta ea quos laborum et est.",
            "votes": Object {
              "edges": Array [],
            },
          },
        },
        Object {
          "node": Object {
            "title": "Id consequatur accusantium quia.",
            "votes": Object {
              "edges": Array [],
            },
          },
        },
        Object {
          "node": Object {
            "title": "Sapiente atque suscipit quisquam et quos non.",
            "votes": Object {
              "edges": Array [],
            },
          },
        },
        Object {
          "node": Object {
            "title": "Animi reprehenderit voluptas quisquam temporibus aspernatur.",
            "votes": Object {
              "edges": Array [],
            },
          },
        },
        Object {
          "node": Object {
            "title": "Voluptatem et et dolorem rerum commodi aut.",
            "votes": Object {
              "edges": Array [],
            },
          },
        },
        Object {
          "node": Object {
            "title": "In rerum voluptate exercitationem voluptate ullam eos consequatur.",
            "votes": Object {
              "edges": Array [],
            },
          },
        },
        Object {
          "node": Object {
            "title": "Quis expedita dolores autem quibusdam totam.",
            "votes": Object {
              "edges": Array [],
            },
          },
        },
        Object {
          "node": Object {
            "title": "Odio nobis est ex ut deserunt.",
            "votes": Object {
              "edges": Array [],
            },
          },
        },
        Object {
          "node": Object {
            "title": "Quae officia aut voluptatibus quas id non.",
            "votes": Object {
              "edges": Array [],
            },
          },
        },
        Object {
          "node": Object {
            "title": "Dicta voluptas veniam sit quo odio vero eum.",
            "votes": Object {
              "edges": Array [],
            },
          },
        },
        Object {
          "node": Object {
            "title": "Excepturi iusto nam at quas numquam iste nemo.",
            "votes": Object {
              "edges": Array [],
            },
          },
        },
        Object {
          "node": Object {
            "title": "Ea molestias tenetur fugiat pariatur.",
            "votes": Object {
              "edges": Array [],
            },
          },
        },
        Object {
          "node": Object {
            "title": "Est magni consequatur culpa ipsum.",
            "votes": Object {
              "edges": Array [],
            },
          },
        },
        Object {
          "node": Object {
            "title": "Debitis adipisci rerum nam.",
            "votes": Object {
              "edges": Array [],
            },
          },
        },
        Object {
          "node": Object {
            "title": "Nostrum eaque voluptatem similique reprehenderit sapiente consequatur earum.",
            "votes": Object {
              "edges": Array [],
            },
          },
        },
        Object {
          "node": Object {
            "title": "Quia eum qui asperiores tenetur eius mollitia.",
            "votes": Object {
              "edges": Array [],
            },
          },
        },
        Object {
          "node": Object {
            "title": "Soluta necessitatibus itaque culpa incidunt est sapiente.",
            "votes": Object {
              "edges": Array [],
            },
          },
        },
        Object {
          "node": Object {
            "title": "Amet officiis facilis deleniti quo aperiam sed quos.",
            "votes": Object {
              "edges": Array [],
            },
          },
        },
        Object {
          "node": Object {
            "title": "Placeat totam voluptatem occaecati.",
            "votes": Object {
              "edges": Array [],
            },
          },
        },
        Object {
          "node": Object {
            "title": "Aspernatur a unde quis ab voluptatem mollitia.",
            "votes": Object {
              "edges": Array [],
            },
          },
        },
        Object {
          "node": Object {
            "title": "Ea voluptas tenetur quis maxime ab sit.",
            "votes": Object {
              "edges": Array [],
            },
          },
        },
        Object {
          "node": Object {
            "title": "Voluptas vero repellat saepe reiciendis.",
            "votes": Object {
              "edges": Array [],
            },
          },
        },
        Object {
          "node": Object {
            "title": "Molestias ea iste maxime non animi nisi fugit magnam.",
            "votes": Object {
              "edges": Array [],
            },
          },
        },
        Object {
          "node": Object {
            "title": "Velit velit ut rem repellendus ut sit laudantium.",
            "votes": Object {
              "edges": Array [],
            },
          },
        },
        Object {
          "node": Object {
            "title": "Nobis iusto possimus accusantium fugiat.",
            "votes": Object {
              "edges": Array [],
            },
          },
        },
        Object {
          "node": Object {
            "title": "Animi et nulla voluptate iste enim sunt architecto.",
            "votes": Object {
              "edges": Array [],
            },
          },
        },
        Object {
          "node": Object {
            "title": "Vero aperiam fugit molestias illo repudiandae modi.",
            "votes": Object {
              "edges": Array [],
            },
          },
        },
        Object {
          "node": Object {
            "title": "Dolorem libero repellat ipsum ducimus distinctio explicabo.",
            "votes": Object {
              "edges": Array [],
            },
          },
        },
        Object {
          "node": Object {
            "title": "Adipisci fuga aspernatur distinctio quos.",
            "votes": Object {
              "edges": Array [],
            },
          },
        },
        Object {
          "node": Object {
            "title": "Nesciunt ut reiciendis perspiciatis eos ut.",
            "votes": Object {
              "edges": Array [],
            },
          },
        },
        Object {
          "node": Object {
            "title": "Labore quos saepe quia quia.",
            "votes": Object {
              "edges": Array [],
            },
          },
        },
        Object {
          "node": Object {
            "title": "Quaerat minima id corrupti veritatis aspernatur.",
            "votes": Object {
              "edges": Array [],
            },
          },
        },
        Object {
          "node": Object {
            "title": "At eveniet harum aperiam fugiat asperiores.",
            "votes": Object {
              "edges": Array [],
            },
          },
        },
        Object {
          "node": Object {
            "title": "Est quod ratione quidem odit unde.",
            "votes": Object {
              "edges": Array [],
            },
          },
        },
        Object {
          "node": Object {
            "title": "Harum voluptatem at enim tempora voluptas ut dolorem.",
            "votes": Object {
              "edges": Array [],
            },
          },
        },
        Object {
          "node": Object {
            "title": "Magnam magnam nihil ea officia.",
            "votes": Object {
              "edges": Array [],
            },
          },
        },
        Object {
          "node": Object {
            "title": "Tenetur deleniti quibusdam autem mollitia non occaecati explicabo.",
            "votes": Object {
              "edges": Array [],
            },
          },
        },
        Object {
          "node": Object {
            "title": "Nulla sunt tempora voluptates.",
            "votes": Object {
              "edges": Array [],
            },
          },
        },
        Object {
          "node": Object {
            "title": "Expedita eveniet sint inventore.",
            "votes": Object {
              "edges": Array [],
            },
          },
        },
        Object {
          "node": Object {
            "title": "Aut quaerat ut illo voluptatum quo rerum.",
            "votes": Object {
              "edges": Array [],
            },
          },
        },
        Object {
          "node": Object {
            "title": "Aut debitis laborum maiores nam nobis.",
            "votes": Object {
              "edges": Array [],
            },
          },
        },
        Object {
          "node": Object {
            "title": "Beatae vel sunt in voluptate.",
            "votes": Object {
              "edges": Array [],
            },
          },
        },
        Object {
          "node": Object {
            "title": "Quia ad quas ut cumque laborum quod.",
            "votes": Object {
              "edges": Array [],
            },
          },
        },
        Object {
          "node": Object {
            "title": "Quibusdam sed occaecati soluta porro vel facilis sunt.",
            "votes": Object {
              "edges": Array [],
            },
          },
        },
        Object {
          "node": Object {
            "title": "Praesentium nam consequatur incidunt.",
            "votes": Object {
              "edges": Array [],
            },
          },
        },
        Object {
          "node": Object {
            "title": "Qui alias itaque esse sint nisi sed maiores.",
            "votes": Object {
              "edges": Array [],
            },
          },
        },
        Object {
          "node": Object {
            "title": "Odio aut eum porro qui reprehenderit repellendus.",
            "votes": Object {
              "edges": Array [],
            },
          },
        },
        Object {
          "node": Object {
            "title": "Repellendus ipsa nemo dolores nesciunt.",
            "votes": Object {
              "edges": Array [],
            },
          },
        },
        Object {
          "node": Object {
            "title": "Consectetur numquam vel explicabo est rerum maiores.",
            "votes": Object {
              "edges": Array [],
            },
          },
        },
        Object {
          "node": Object {
            "title": "Voluptatibus quibusdam iusto sed rerum.",
            "votes": Object {
              "edges": Array [],
            },
          },
        },
        Object {
          "node": Object {
            "title": "Qui asperiores velit sit nihil hic excepturi.",
            "votes": Object {
              "edges": Array [],
            },
          },
        },
        Object {
          "node": Object {
            "title": "Eum vitae impedit recusandae temporibus quam.",
            "votes": Object {
              "edges": Array [],
            },
          },
        },
        Object {
          "node": Object {
            "title": "Minima repellat voluptates repudiandae.",
            "votes": Object {
              "edges": Array [],
            },
          },
        },
        Object {
          "node": Object {
            "title": "Consequuntur possimus sequi est harum.",
            "votes": Object {
              "edges": Array [],
            },
          },
        },
        Object {
          "node": Object {
            "title": "Perspiciatis nam ut omnis consequatur delectus et corporis.",
            "votes": Object {
              "edges": Array [],
            },
          },
        },
        Object {
          "node": Object {
            "title": "Eaque aut cum reiciendis voluptatem.",
            "votes": Object {
              "edges": Array [],
            },
          },
        },
        Object {
          "node": Object {
            "title": "Architecto blanditiis quaerat aliquam esse.",
            "votes": Object {
              "edges": Array [],
            },
          },
        },
        Object {
          "node": Object {
            "title": "Illum unde vitae quos officiis voluptatibus cupiditate cupiditate.",
            "votes": Object {
              "edges": Array [],
            },
          },
        },
        Object {
          "node": Object {
            "title": "Necessitatibus ad est cumque et vel aut.",
            "votes": Object {
              "edges": Array [],
            },
          },
        },
        Object {
          "node": Object {
            "title": "Sed enim dolores ipsum nisi sed quis ut.",
            "votes": Object {
              "edges": Array [],
            },
          },
        },
        Object {
          "node": Object {
            "title": "Explicabo ut molestias voluptatem repellat dicta.",
            "votes": Object {
              "edges": Array [],
            },
          },
        },
      ],
      "totalCount": 302,
    },
    "title": "Vote des Franciliens",
  },
}
`;
